@@ -1,6 +1,8 @@
 Revision history for Dancer::Plugin::Cache
 
 {{$NEXT}}
+    - Dancer::Plugin::Cache deprecated in favor of
+        Dancer::Plugin::Cache::CHI
 
 0.2.1     2011-03-20 23:19:49 America/Montreal
     - Requires Dancer > 1.150
